# Jackson

./: package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: 2.0.0-rc  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/windows/: app.manifest
src-tauri/src/: audio.rs  main.rs  speech_recognition.rs  wake_word.rs
