[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.71"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.18", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0.0-rc.18", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-log = "2.0.0-rc.8"
tauri-plugin-shell = "2.0.0-rc"
pv_porcupine = "*"
tokio = { version = "1.0", features = ["full"] }
cpal = "0.15"  # For audio capture
anyhow = "1.0" # For error handling
crossbeam-channel = "0.5"
num-traits = "0.2.14"
sapi-lite = "0.1.1"
